# melyze

./: .gitignore  CMakeLists.txt  LICENSE  README.md
jni/: Android.mk
sample/: CMakeLists.txt  README.md  main.cpp
sample/jni/: Android.mk
src/: bitswap.cpp  bitswap.hpp  cli.cpp  cli.hpp  main.cpp  melyze.cpp  melyze.hpp  process.cpp  process.hpp  procinfo.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp
src/elf/: elf.h
